feat(ops): Environment standardization + SuperAdmin setup + Config audit
Consolidates operational improvements from two parallel agent sessions:

ENVIRONMENT VARIABLE STANDARDIZATION (Env Agent):
- Updated .env.example with CANONICAL key markers (AUTH_SECRET, MONGODB_URI)
- Added ENV_VAR_MISMATCH_ANALYSIS.md (15K technical deep-dive)
- Added ENV_VAR_ACTION_PLAN.md (7.5K practical checklist)
- Created env-doctor.ts validation script (4.9K)
- Clarified AUTH_SECRET vs NEXTAUTH_SECRET platform differences

SUPERADMIN CONFIGURATION (SuperAdmin Agent):
- Setup sultan.a.hassni@gmail.com with OTP bypass
- Added SUPERADMIN_ACCOUNTS_STATUS.md (2.7K)
- Added SUPERADMIN_LOGIN_GUIDE.md (5.0K troubleshooting)
- Created verification scripts (check-superadmin.ts, test-superadmin-login.ts)
- Added IMPORT_READY.md for MongoDB Issue Tracker integration

CONFIG SSOT AUDIT (Config SSOT Agent):
- Updated BACKLOG_AUDIT.json and BACKLOG_AUDIT.md
- BUG-001 (Config SSOT migration): COMPLETED (41+ env vars migrated)
- TEST-004 (JSON.parse error handling): COMPLETED (1 route fixed)
- SEC-002 (Tenant scope audit script): COMPLETED (197 issues detected)

FILES CHANGED: 11 (3 modified, 8 created)
VERIFICATION: TypeCheck PASSED, ESLint PASSED, Vercel build FIXED (e859857e7)

Related commits:
- e859857e7 fix(api): Add missing Config imports - Vercel hotfix
- cbf7a13bd feat(security): Tenant scope audit script (SEC-002)
- 83e341156 refactor(api): Config SSOT migration complete (BUG-001)

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,8 @@ SELLER_SUPPORT_EMAIL=support@example.com
 # === DATABASE (MongoDB) ===
 # Development (Docker): mongodb://admin:fixzit2024@localhost:27017/fixzit?authSource=admin
 # Production: Use MongoDB Atlas connection string
+# CANONICAL KEY: MONGODB_URI
+# Supported aliases: DATABASE_URL, MONGODB_URL, MONGO_URL (via lib/env.ts)
 MONGODB_URI=mongodb://localhost:27017/fixzit
 MONGODB_DB=fixzit
 
@@ -52,15 +54,20 @@ COMPOSE_MONGODB_URI=
 # NEVER commit the actual secret to git!
 JWT_SECRET=
 
-# === NEXTAUTH (OAuth Authentication) ===
+# === AUTHENTICATION SECRETS ===
 # Multiple secrets strategy (security best practice):
 # - JWT_SECRET: Used by custom auth.ts functions for API tokens
-# - NEXTAUTH_SECRET: Used by NextAuth.js for OAuth session signing
+# - AUTH_SECRET: Used by Auth.js for session signing (CANONICAL - use this)
 # - INTERNAL_API_SECRET: Used for server-to-server authentication
 # Each secret should be DIFFERENT to limit blast radius if one is compromised
 
-# NextAuth secret for JWT signing (MUST be 32+ characters)
+# Auth.js session secret for JWT signing (MUST be 32+ characters)
 # Generate: openssl rand -base64 32
+# CANONICAL KEY: Use AUTH_SECRET (codebase supports both AUTH_SECRET and NEXTAUTH_SECRET)
+# Platform compatibility: GitHub Actions uses NEXTAUTH_SECRET, Vercel uses AUTH_SECRET
+# Set BOTH to the same value to avoid drift (resolveAuthSecret() handles fallback)
+AUTH_SECRET=
+# Legacy alias (keep for backwards compatibility until fully migrated)
 NEXTAUTH_SECRET=
 
 # ⚠️ CRITICAL FOR VERCEL/PROXIED DEPLOYMENTS:
@@ -296,10 +303,13 @@ NOTIFICATIONS_SMOKE_EMAIL=
 NOTIFICATIONS_SMOKE_PHONE=
 
 # Email (SendGrid, AWS SES, Mailgun)
-# The codebase supports multiple aliases for Vercel naming conventions:
-# - SENDGRID_API_KEY (preferred)
-# - SEND_GRID (Vercel legacy)
-# - SEND_GRID_EMAIL_FIXZIT_TOKEN (Vercel custom)
+# CANONICAL KEY: SENDGRID_API_KEY
+# Platform compatibility: Vercel uses SEND_GRID or SEND_GRID_EMAIL_FIXZIT_TOKEN
+# The codebase supports all variants via lib/env.ts aliasing:
+# - SENDGRID_API_KEY (CANONICAL - use this)
+# - SEND_GRID (legacy alias)
+# - SEND_GRID_EMAIL_FIXZIT_TOKEN (legacy alias)
+# Set SENDGRID_API_KEY explicitly in both platforms for clarity
 SENDGRID_API_KEY=
 FROM_EMAIL=noreply@fixzit.sa
 
@@ -370,10 +380,15 @@ INTERNAL_API_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 
 # Google OAuth credentials (get from Google Cloud Console)
-# The codebase supports multiple aliases for Vercel naming conventions:
-# - GOOGLE_CLIENT_ID (preferred)
-# - GOOGLE_CLIENT_SECRET (preferred)
-# - OAUTH_CLIENT_GOOGLE (Vercel legacy - maps to GOOGLE_CLIENT_SECRET)
+# CANONICAL KEYS: GOOGLE_CLIENT_ID + GOOGLE_CLIENT_SECRET
+# Platform compatibility: Some Vercel configs use OAUTH_CLIENT_GOOGLE (legacy)
+# The codebase supports aliases via lib/env.ts:
+# - GOOGLE_CLIENT_ID (CANONICAL - use this)
+# - GOOGLE_CLIENT_SECRET (CANONICAL - use this)
+# - OAUTH_CLIENT_GOOGLE_ID (legacy alias for ID)
+# - OAUTH_CLIENT_GOOGLE_SECRET (legacy alias for SECRET)
+# - OAUTH_CLIENT_GOOGLE (legacy alias for SECRET only)
+# Set both GOOGLE_CLIENT_ID and GOOGLE_CLIENT_SECRET explicitly in both platforms
 GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
@@ -440,8 +455,12 @@ PAYTABS_CALLBACK_IDEMPOTENCY_TTL_MS=300000
 # =============================================================================
 # MAPS & LOCATION (Google Maps)
 # =============================================================================
+# CANONICAL KEY: NEXT_PUBLIC_GOOGLE_MAPS_API_KEY (client-side, required for browser)
+# Platform compatibility: GitHub Actions may have GOOGLE_MAPS_API_KEY (unused)
+# Runtime verification: Only NEXT_PUBLIC_GOOGLE_MAPS_API_KEY is consumed by components/GoogleMap.tsx
+# Server-side Maps key (GOOGLE_MAPS_API_KEY) is NOT used in the codebase
+# Set NEXT_PUBLIC_GOOGLE_MAPS_API_KEY in both Vercel + GitHub Actions
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
-GOOGLE_MAPS_API_KEY=your_server_side_google_maps_key
 
 # =============================================================================
 # ZATCA E-INVOICING (Saudi Arabia Compliance)
