fix(ci,api): GitHub Actions env context + TypeScript implicit any
Fixed GitHub Actions workflow validation errors:
- release-gate.yml: Use vars directly in environment names (not env context)
- actionlint.yml: Remove deprecated fail_on_error parameter

Fixed TypeScript errors in superadmin issues report route:
- Added Issue type derived from Mongoose lean() result
- Explicit typing for filter callbacks (no implicit any)

Validation:
- pnpm typecheck: 0 errors ✅
- GitHub Actions linter: 0 validation errors on env context
- All workflow YAML properly structured

--- a/.github/workflows/release-gate.yml
+++ b/.github/workflows/release-gate.yml
@@ -34,11 +34,6 @@ concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: false
 
-env:
-  GH_ENV_STAGING: ${{ vars.GH_ENV_STAGING || 'staging' }}
-  GH_ENV_PROD_APPROVAL: ${{ vars.GH_ENV_PROD_APPROVAL || 'production-approval' }}
-  GH_ENV_PRODUCTION: ${{ vars.GH_ENV_PRODUCTION || 'production' }}
-
 jobs:
   # Stage 1: Build and validate
   build:
@@ -90,7 +85,7 @@ jobs:
     if: ${{ github.event_name != 'workflow_dispatch' || !fromJSON(inputs.skip_staging || 'false') }}
     runs-on: ubuntu-latest
     environment:
-      name: ${{ env.GH_ENV_STAGING }}
+      name: ${{ vars.GH_ENV_STAGING || 'staging' }}
       url: ${{ steps.deploy.outputs.url }}
     outputs:
       staging_url: ${{ steps.deploy.outputs.url }}
@@ -183,7 +178,7 @@ jobs:
     needs: [build, deploy-staging, smoke-tests]
     runs-on: ubuntu-latest
     environment:
-      name: ${{ env.GH_ENV_PROD_APPROVAL }}
+      name: ${{ vars.GH_ENV_PROD_APPROVAL || 'production-approval' }}
     steps:
       - name: Approval checkpoint
         run: |
@@ -199,7 +194,7 @@ jobs:
     needs: [build, deploy-staging, approval-gate]
     runs-on: ubuntu-latest
     environment:
-      name: ${{ env.GH_ENV_PRODUCTION }}
+      name: ${{ vars.GH_ENV_PRODUCTION || 'production' }}
       url: https://fixzit.app
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
