fix(critical): Remove PayTabs + fix Redis boot crash + restore strict env validation
Root Cause Analysis:
1. Redis: lib/redis-client.ts had top-level 'import Redis from ioredis' which threw
   synchronously when REDIS_URL contained invalid/malformed hostname. Changed to
   dynamic import (matching lib/redis.ts pattern) to prevent boot crashes.

2. Strict validation: PR #555 strict env guards were correctly blocking startup
   when required secrets missing. Emergency bypass was WRONG approach - restoring
   proper fail-fast behavior per Fixizit security standards.

3. PayTabs: User confirmed using Tap Payments only. Removed all PayTabs code.

Fixes:
- lib/redis-client.ts: Dynamic import + try-catch around new Redis() constructor
- lib/env-validation.ts: Restored production throw for missing AUTH/JWT/MONGODB secrets
- instrumentation-node.ts: Restored fail-fast throw (removed emergency bypass)
- Removed PayTabs from: env-validation, config/constants, config/domains, startup-checks
- services/souq/settlements/escrow-service.ts: Updated provider enum (removed PAYTABS)
- app/api/billing/charge-recurring/route.ts: Deprecated PayTabs recurring endpoint

Production Fix:
- If Redis URL is invalid: app logs error and falls back to in-memory cache
- If required env vars missing: app BLOCKS STARTUP with clear error messages
- No more silent failures or emergency bypasses

Next Steps (User Action Required):
1. Check Vercel Runtime Logs for exact missing env var
2. Set missing secrets in Vercel Project Settings (Production):
   - AUTH_SECRET or NEXTAUTH_SECRET
   - JWT_SECRET
   - MONGODB_URI
   - Fix or remove invalid REDIS_URL
3. Redeploy production

Verification:
- pnpm typecheck: ✅ 0 errors
- pnpm lint: ✅ 0 errors

--- a/.github/workflows/build-sourcemaps.yml
+++ b/.github/workflows/build-sourcemaps.yml
@@ -28,6 +28,8 @@ jobs:
       SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
       # expose release to build/runtime; SDKs read SENTRY_RELEASE
       SENTRY_RELEASE: ${{ github.sha }}
+      # MongoDB conditional guard (evaluate secret at job level for step conditionals)
+      HAS_MONGODB_URI: ${{ secrets.MONGODB_URI != '' }}
 
     steps:
       - name: 📦 Checkout
