--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -21,11 +21,9 @@ jobs:
     env:
       LOG_LEVEL: info
       RENOVATE_REPOSITORY: ${{ github.repository }}
-      # Prefer RENOVATE_TOKEN secret, else fall back to GitHub token
-      RENOVATE_TOKEN: ${{ secrets['RENOVATE_TOKEN'] || github.token }}
     steps:
       - name: Run Renovate
         uses: renovatebot/github-action@v44.0.5
         with:
           configurationFile: renovate.json
-          token: ${{ env.RENOVATE_TOKEN }}
+          token: ${{ secrets.RENOVATE_TOKEN != '' && secrets.RENOVATE_TOKEN || github.token }}
