--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -35,12 +35,10 @@ jobs:
         )
       }}
     runs-on: ubuntu-latest
-
     steps:
       - name: PR Agent action step
-        # Skip cleanly if not configured
         if: ${{ secrets.OPENAI_KEY != '' }}
-        uses: qodo-ai/pr-agent@main
+        uses: qodo-ai/pr-agent@v0.9
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
           GITHUB_TOKEN: ${{ github.token }}
