--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -26,4 +26,4 @@ jobs:
         uses: renovatebot/github-action@v44.0.5
         with:
           configurationFile: renovate.json
-          token: ${{ secrets.RENOVATE_TOKEN != '' && secrets.RENOVATE_TOKEN || github.token }}
+          token: ${{ secrets.RENOVATE_TOKEN || github.token }}
