--- a/package.json
+++ b/package.json
@@ -181,12 +181,11 @@
     "@sentry/nextjs": "^10.27.0",
     "@smithy/smithy-client": "^4.9.7",
     "@tanstack/react-query": "^5.90.10",
-    "@types/redis": "^4.0.11",
     "@vercel/functions": "^3.3.3",
+    "@vercel/speed-insights": "^1.3.1",
     "ai": "^5.0.98",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
-    "bullmq": "^5.63.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
@@ -206,7 +205,6 @@
     "ical.js": "^2.2.1",
     "import-in-the-middle": "1.15.0",
     "intl-messageformat": "^10.7.18",
-    "ioredis": "^5.8.2",
     "isomorphic-dompurify": "^2.32.0",
     "jose": "^5.10.0",
     "jsonwebtoken": "^9.0.3",
@@ -300,7 +298,6 @@
     "prettier": "^3.6.2",
     "puppeteer": "^24.30.0",
     "recast": "^0.23.11",
-    "redis": "^5.9.0",
     "simple-git-hooks": "^2.9.0",
     "storybook": "^8.6.14",
     "supertest": "^6.3.4",
