feat(infra): Export MongoDB Atlas App Services configuration + security updates
Session 2025-12-16 17:00 (Asia/Riyadh):

✅ COMPLETED:
- Installed atlas-app-services-cli globally
- Authenticated and pulled app 'Triggers' (triggers-qvevnvh)
- Exported configuration to ./Triggers/ directory
  - Region: AWS US-East-1, Deployment: LOCAL
  - Data Source: Fixzit cluster (primary read)
  - Status: 0 functions, 0 triggers configured
  - Environments: dev, testing, qa, prod, no-env

🔒 SECURITY:
- Added /Triggers/ and /.mdb/ to .gitignore
- API keys exposed in session (public: qefjbwzu, private: 22d1***24)
- ⚠️ CRITICAL: Rotate API keys immediately after documentation

📝 DOCUMENTATION:
- Updated PENDING_MASTER.md with export session
- Configuration baseline established for future trigger development

Next: Rotate MongoDB Atlas API keys

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ tsconfig.tsbuildinfo
 *.key
 *.crt
 
+# MongoDB Atlas App Services (exported config - contains IDs, regenerate with appservices pull)
+/Triggers/
+/.mdb/
+
 # Dev login credentials (never commit real credentials)
 /app/dev/login-helpers/credentials.ts
 /dev/credentials.local.ts
