fix(superadmin+workflows): UI-001/I18N-001/OPS-001/OPS-002 - Language dropdown + CI fixes
Quality Improvements:
- UI-001: Replaced language toggle with proper Select dropdown (flags + accessible)
- I18N-001: Use normalizeLocale() for robust locale handling (ar-SA/AR-SA/ar_SA → ar)
- OPS-001: Fix GitHub Actions step order (pnpm before Node.js setup)
- OPS-002: Update PR Agent action (qodo-ai deprecated → Codium-ai/pr-agent@main)

Files Changed:
- components/superadmin/SuperadminHeader.tsx (+67/-18)
- app/superadmin/layout.tsx (+4/-1)
- .github/workflows/build-sourcemaps.yml (+10/-5)
- .github/workflows/pr_agent.yml (+2/-1)
- docs/PENDING_MASTER.md (session update)

Validation:
- ✅ pnpm typecheck (0 errors)
- ✅ pnpm lint (0 errors)
- ✅ MongoDB SSOT: 24 issues tracked

--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - name: PR Agent action step
         if: env.HAS_OPENAI_KEY == 'true'
-        uses: qodo-ai/pr-agent@v0.9
+        uses: Codium-ai/pr-agent@main
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
           GITHUB_TOKEN: ${{ github.token }}
