fix(config): Add tsconfig path mappings for (app) route group + SSOT sync
Changes:

1. Added 9 path mappings to tsconfig.json for (app)/* route group structure

   - Marketplace, Souq, Aqar, Login, Signup, Profile, Help, Logout

   - Supports test imports after route group restructuring (898f7b882, db4018455)

2. Updated all 3 SSOT logs to b32bd4630 with MongoDB reality check:

   - BACKLOG_AUDIT.json: commit b32bd4630, MongoDB 34 issues (26/1/7)

   - MASTER_PENDING_REPORT.md: Updated commit ref + MongoDB counts

   - docs/PENDING_MASTER.md: Added 2025-12-18T02:00 session with verification

MongoDB verification (scripts/test-db-direct.mjs):

- Previous: 33 issues (29 open, 1 in_progress, 3 resolved)

- Current: 34 issues (26 open, 1 in_progress, 7 resolved)

- Delta: +1 total, -3 open, +4 resolved

Working tree: CLEAN

Validation: pnpm typecheck + pnpm lint passed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,33 @@
       "@/*": [
         "./*"
       ],
+      "@/app/marketplace/*": [
+        "./app/(app)/marketplace/*"
+      ],
+      "@/app/souq/*": [
+        "./app/(app)/souq/*"
+      ],
+      "@/app/aqar/*": [
+        "./app/(app)/aqar/*"
+      ],
+      "@/app/login/*": [
+        "./app/(app)/login/*"
+      ],
+      "@/app/signup/*": [
+        "./app/(app)/signup/*"
+      ],
+      "@/app/profile/*": [
+        "./app/(app)/profile/*"
+      ],
+      "@/app/help/*": [
+        "./app/(app)/help/*"
+      ],
+      "@/app/logout/*": [
+        "./app/(app)/logout/*"
+      ],
+      "@/app/fm/*": [
+        "./app/(fm)/fm/*"
+      ],
       "ioredis": [
         "./lib/stubs/ioredis"
       ],
