feat(ci): add merge-gate pipeline with untruncated evidence scans
MERGE GATE IMPLEMENTATION (STRICT P0 FIX)
=========================================

Critical Fixes:
✅ P0-A: Confirmed .artifacts/ already in .gitignore (NOT committed)
✅ P0-B: Replaced ALL truncated scans with full untruncated scans
✅ Security: Scanned for secrets in .artifacts/ - only false positive found
✅ ESLint: Fixed 2 unused variable errors (t → _t in superadmin files)

New Merge Gate Pipeline:
- Script: scripts/ci/local-merge-gate.sh (executable)
- Command: pnpm merge:gate
- Exit Code: 0 = merge-ready, 1 = blocking failures

Pipeline Stages:
1. Environment metadata (Node, pnpm, git SHA, timestamp)
2. ESLint (--max-warnings=0)
3. TypeScript type checking
4. Full test suite (unfiltered log + JSON output)
5. Production build verification
6. System-wide scans (FULL - NO TRUNCATION)

Untruncated Scan Results:
- Scan A: 14 @vitest-environment node annotations
- Scan B: 1,736 server-only imports (mongoose/bullmq/ioredis/mongodb)
- Scan C: 506 dynamic imports in tests
- Scan D: 95 app route imports in tests (brittle pattern)
- Scan E: 1,195 mock patterns (vi.mock/doMock/hoisted)
- Scan F: 0 hoisting errors (verified in full log)
- Total: 3,546 scan matches documented

Artifacts Generated (local only, git-ignored):
.artifacts/
├── test/
│   ├── node.txt, pnpm.txt, commit.txt, timestamp.txt
│   ├── lint.log, typecheck.log, build.log
│   ├── vitest-full.log (unfiltered)
│   ├── vitest-full.json (machine-readable)
│   └── vitest-summary.json (jq extract)
└── scan/
    ├── env-node.full.txt (14 lines)
    ├── server-only-imports.full.txt (1,736 lines)
    ├── dynamic-imports-tests.full.txt (506 lines)
    ├── test-imports-app-pages.full.txt (95 lines)
    ├── mocks.full.txt (1,195 lines)
    ├── hoist-errors.txt (0 errors)
    └── counts.txt (summary)

Usage:
  pnpm merge:gate  # Run full pipeline locally
  bash scripts/ci/local-merge-gate.sh  # Direct invocation

Exit Criteria:
- success: true in vitest-f

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cleanup:cache": "bash scripts/cleanup-dev-cache.sh",
     "agent:verify": "npm run typecheck && npm run lint && npm run build",
     "qa:verify": "node scripts/qa/halt-fix-verify.mjs",
+    "merge:gate": "bash scripts/ci/local-merge-gate.sh",
     "verify": "node qa/scripts/verify.mjs --fast",
     "verify:fast": "node qa/scripts/verify.mjs --fast",
     "verify:full": "VERIFY_FULL=true node qa/scripts/verify.mjs",
