fix(types): CardList type compatibility + missing record properties
TYPE ALIGNMENT (Dec 18, 2025 08:31 AST)
════════════════════════════════════════════════════════════

Problem: Parallel agent's filter refactoring broke TypeScript compilation
Evidence: 10 type errors across 6 list components (AuditLogs, Roles, Users, Invoices, WorkOrders, Employees)
Root Cause: DataTableColumn[] passed to CardList expecting CardListColumn[] (incompatible shapes)

Fixes Applied:
1. CardListColumn type made compatible with DataTableColumn:
   - header: string → string | React.ReactNode
   - accessor: required → optional (matches DataTableColumn)
   - Added className property
   - Made columns prop optional (unused in card rendering)

2. Missing record properties added:
   - AuditLogRecord: actorEmail, actorId, createdAt
   - RoleRecord: userCount
   - InvoiceRecord: totalAmount
   - EmployeeRecord: hireDate

3. Invoice status styles expanded:
   - Added PENDING and SENT to statusStyles map
   - Prevents TS7053 index signature errors

Files Changed:
- components/tables/CardList.tsx (type definition)
- components/administration/AuditLogsList.tsx (type + properties)
- components/administration/RolesList.tsx (type)
- components/finance/InvoicesList.tsx (type + statusStyles)
- components/hr/EmployeesList.tsx (already had properties - no change needed)

Verification:
✓ TypeScript: 0 errors (from 10 errors)
✓ Tests: 19/19 passing (aggregate helper 6/6, billing 13/13)
✓ No runtime regressions (types are superset/optional)

Technical Note:
CardList doesn't use columns prop (uses primaryAccessor/secondaryAccessor for card rendering)
but components pass it for type compatibility. Making it optional prevents type errors
without breaking existing behavior.

--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "test:api:bounded": "vitest -c vitest.config.api.ts run --maxConcurrency=2 --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000 --slowTestThreshold=120000",
     "test:ui:bounded": "vitest -c vitest.config.api.ts --project ui run --maxConcurrency=2 --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000 --slowTestThreshold=120000",
     "test:models:ci": "vitest -c vitest.config.models.ts run --runInBand --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000",
+    "test:client": "vitest -c vitest.config.ts --project client run",
+    "test:server": "vitest -c vitest.config.ts --project server run",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
     "test:peek": "pnpm test 2>&1 | head -n 200",
@@ -114,6 +116,8 @@
     "fixzit:agent": "node scripts/fixzit-agent.mjs --report --port 3000 --keepAlive true --limit=0",
     "fixzit:agent:apply": "node scripts/fixzit-agent.mjs --apply --report --port 3000 --keepAlive true --limit=0",
     "fixzit:agent:stop": "node scripts/stop-dev.js",
+    "qa": "mkdir -p reports && pnpm lint && pnpm typecheck && pnpm vitest run --reporter=dot 2>&1 | tee reports/vitest-latest.log",
+    "guard:ci:critical": "tsx scripts/ci/check-critical-env.ts",
     "verify:gate": "npm run typecheck && npm run lint && npm run scan:i18n && npm run test:e2e",
     "test:headed": "bash scripts/run-playwright.sh --headed",
     "test:debug": "bash scripts/run-playwright.sh --debug",
