feat(lint): Filter schema validation guard + ESLint fix
PHASE 2 COMPLETE (Dec 18, 2025 08:35 AST)
════════════════════════════════════════════════════════════

Phase 2A: Filter Schema Migration ✅
- All 8 list components already use FilterSchema pattern
- Verified via grep: buildActiveFilterChips + FILTER_SCHEMA present
- No migration needed (completed in prior work)

Phase 2B: Filter Schema Lint Guard ✅
- Created scripts/validate-filter-schemas.js
- Validates all *List components for schema completeness
- Detects missing schema definitions + drift
- Added to package.json as 'lint:filter-schemas'
- Integrated into 'lint:ci' pipeline
- Validation: 12 components scanned, 0 errors

ESLint Fix:
- components/superadmin/SuperadminHeader.tsx: Removed unused Link import

Evidence:
✅ pnpm lint:filter-schemas → PASS
✅ pnpm lint:prod → PASS
✅ pnpm typecheck → PASS (0 errors)

Status: MERGE-READY for Phase 2

--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "lint:rbac-perms": "node scripts/check-no-wildcard-perms.js",
     "lint:inventory-org": "tsx scripts/lint-inventory-orgid.ts",
     "lint:mongo-unwrap": "node tools/check-mongo-unwrap.js",
+    "lint:filter-schemas": "node scripts/validate-filter-schemas.js",
     "lint:prod:baseline": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --format json -o _artifacts/eslint-baseline.json",
     "lint:scripts": "eslint scripts tools --ext .ts,.tsx,.js,.jsx",
     "lint:collections": "node scripts/lint-collections.js",
-    "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run rbac:client:check && npm run lint:rbac && npm run typecheck && pnpm vitest run tests/unit/security/banned-literals.test.ts",
+    "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run lint:filter-schemas && npm run rbac:client:check && npm run lint:rbac && npm run typecheck && pnpm vitest run tests/unit/security/banned-literals.test.ts",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
     "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
