--- a/.github/workflows/ci-sharded.yml
+++ b/.github/workflows/ci-sharded.yml
@@ -177,12 +177,42 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: 🔍 ESLint Check
-        run: pnpm lint
+        run: pnpm lint:ci
+
+  qa-bundle:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📦 Checkout
+        uses: actions/checkout@v4
+
+      - name: 📦 Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
+      - name: 🔧 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "pnpm"
+
+      - name: 📥 Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: 🧪 QA Bundle (lint + typecheck + vitest)
+        run: pnpm qa
+
+      - name: 📤 Upload vitest log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: vitest-latest
+          path: reports/vitest-latest.log
 
   # Summary Job
   ci-summary:
     runs-on: ubuntu-latest
-    needs: [test-services, test-api, test-unit, typecheck, lint]
+    needs: [test-services, test-api, test-unit, typecheck, lint, qa-bundle]
     if: always()
     steps:
       - name: ✅ CI Summary
@@ -193,3 +223,4 @@ jobs:
           echo "✅ Unit Tests: ${{ needs.test-unit.result }}" >> $GITHUB_STEP_SUMMARY
           echo "✅ TypeScript: ${{ needs.typecheck.result }}" >> $GITHUB_STEP_SUMMARY
           echo "✅ ESLint: ${{ needs.lint.result }}" >> $GITHUB_STEP_SUMMARY
+          echo "✅ QA Bundle: ${{ needs.qa-bundle.result }}" >> $GITHUB_STEP_SUMMARY
