--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
+    "react-joyride": "^2.9.2",
     "recharts": "^3.5.1",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
